--- a/fallback.html
+++ b/fallback.html
@@ -10,11 +10,12 @@
 <body>
 
     <header>
-        <h1>Firefox OS Boilerplate</h1> 
+        <h1>Firefox OS Boilerplate</h1>
     </header>
 
     <div id="main">
-        <p>You are currently offline. You came here through the manifest.appcache file.</p>
+        <p>You are currently offline and the resource that was requested was not available,
+        so you were redirected to here by the manifest.appcache file.</p>
     </div>
 
     <footer>
@@ -27,7 +28,7 @@
     <script type="text/javascript" src="js/base.js"></script>
     <script type="text/javascript" src="js/webapp.js"></script>
 
-    <!-- 
+    <!--
     Loosely based on fxosstub: https://github.com/Jaxo/fxosstub
     -->
 
