--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html>
-<!-- 
-    Exchange the line above for this to enable offline support
-    <html manifest="manifest.appcache">
+<html manifest="manifest.appcache">
+<!--
+    Offline support
 
     Please make your homework before doing this:
         http://www.alistapart.com/articles/application-cache-is-a-douchebag/
         http://appcachefacts.info
-    
-    This might be necessary to set up on your server, to make sure 
+
+    This might be necessary to set up on your server, to make sure
     files are updated when the appcache file itself is:
         https://github.com/robnyman/Firefox-OS-Boilerplate-App/blob/gh-pages/.htaccess
  -->
@@ -19,7 +18,8 @@
     <link rel="stylesheet" type="text/css" href="css/headers.css">
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
     <link rel="stylesheet" type="text/css" href="css/toolbars.css">
-    <title>Firefox OS Boilerplate App</title>
+    <link rel="stylesheet" type="text/css" href="css/webapp.css">
+    <title>kbt2</title>
 </head>
 
 <body>
@@ -27,103 +27,69 @@
     <section role="region">
         <header>
             <!-- Icon that will indicate whether you are online or offline - enabled if you are using offline/appcache (see above) -->
-            <div id="online-status" title="Online"></div>
+            <!-- <div id="online-status" title="Online"></div> -->
             <menu type="toolbar">
                 <button id="install"><span class="icon icon-add">add</span></button>
+
+                <button data-seconds="2"  class="interval">2s</button>
+                <button data-seconds="60"  class="interval">1m</button>
+                <button data-seconds="120" class="interval">2m</button>
+                <button data-seconds="180" class="interval">3m</button>
+                <button class="counter">loading</button>
             </menu>
-            <h1>
-                Firefox OS Boilerplate App
-            </h1>
+          <!--   <h1>
+                kbt2
+            </h1> -->
         </header>
     </section>
 
 
     <div id="main">
-
-        <p id="installation-instructions">Press the + button in the top right corner to install this app.</p>
-
-        <h2>WebActivities</h2>
-
-        <button id="pick-image">Pick image</button>
-        <div id="image-presenter"></div>
-
-        <button id="pick-anything">Pick anything</button>
-
-        <button id="record">Take picture</button>
-
-        <button id="dial">Dial number</button>
-
-        <button id="send-sms">Send SMS</button>
-
-        <button id="add-contact">Add contact</button>
-
-        <button id="share">Share URL</button>
-
-        <button id="share-image">Share Image</button>
-        <img id="image-to-share" src="images/logo64.png" alt="">
-
-        <button id="view-url">View URL</button>
-
-        <button id="compose-email">Compose mail</button>
-
-        <button id="save-bookmark">Save bookmark</button>
-
-
-        <h2>WebAPIs</h2>
-
-        <button id="add-notification">Add notification</button>
-
-        <button id="lock-orientation">Orientation lock</button>
-
-        <button id="vibrate">Vibrate 2 sec</button>
-
-        <button id="add-alarm">Add alarm</button>
-
-        <button id="check-connection">Check connection</button>
-        <div id="connection-display">Connection values should show up here</div>
-
-        <button id="check-battery">Check battery</button>
-        <div id="battery-display">Battery values should show up here</div>
-
-        <button id="geolocation">Geolocation</button>
-        <div id="geolocation-display">Geolocation coords should show up here</div>
-
-        <button id="ambient-light">Ambient light</button>
-        <div id="ambient-light-display">Ambient light should show up here</div>        
-
-        <button id="proximity">Proximity</button>
-        <div id="proximity-display">Proximity should show up here</div>
-
-        <button id="user-proximity">User proximity</button>
-        <div id="user-proximity-display">User proximity should show up here</div>
-
-        <button id="device-orientation">Device orientation</button>
-        <div id="device-orientation-display">Device orientation should show up here</div>
-
-        <h3>Privileged APIs</h3>
-
-        <button id="cross-domain-xhr">Cross-domain XHR</button>
-        <div id="cross-domain-xhr-display"></div>
-
-        <button id="device-storage-pictures">deviceStorage - pictures</button>
-        <div id="device-storage-pictures-display"></div>
+        <p style="height: 4rem;" >
+            topbar placeholder
+        </p>
+        <p id="installation-instructions">
+            Press the + button in the top right corner to install this app.
+        </p>
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+        <p>Instructions</p>
+       
     </div>
-
-    <footer>
-        <div role="toolbar">
-            <ul>
-                <li><button id="reload" class="update">Update</button></li>
-            </ul>
-        </div>
-    </footer>
 
     <script type="text/javascript" src="js/base.js"></script>
     <script type="text/javascript" src="js/webapp.js"></script>
     <script type="text/javascript" src="js/offline.js"></script>
-
-    <!-- 
-        Loosely based on fxosstub: https://github.com/Jaxo/fxosstub
-    -->
-
 </body>
 </html>
