--- a/index.html
+++ b/index.html
@@ -51,41 +51,133 @@
         <p id="installation-instructions">
             Press the + button in the top right corner to install this app.
         </p>
-        <p>1</p>
-        <p>2</p>
-        <p>3</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-        <p>Instructions</p>
-       
+        <p>
+
+            <h1 id="2050techniek60min">Warming up / Cardio</h1>
+
+            <ul>
+            <li>armen los (L, R, Beiden)</li>
+            <li>uitstoten</li>
+            <li>knieen hoog</li>
+            <li>hakken billen (snel)</li>
+            <li>heupen los</li>
+            <li>lopen</li>
+            <li>jumping jacks</li>
+            </ul>
+
+            <p>Even stil staan</p>
+
+            <ul>
+            <li>squads: 10</li>
+            <li>springende squads: 10</li>
+            <li>lunges vooruit: 16</li>
+            <li>lunges gesprongen: 10 (hoog springen, laag opvangen)</li>
+            </ul>
+
+            <p>Even ademen</p>
+
+            <ul>
+            <li>rekken</li>
+            <li>uitrekken, handen hoog</li>
+            <li>uitrekken, handen losgooien</li>
+            </ul>
+
+            <p>Trappen</p>
+
+            <ul>
+            <li>L Knie: 15</li>
+            <li>R Knie: 15</li>
+            <li>L Knie - L Roundhouse: 10</li>
+            <li>R Knie - R Roundhouse: 10</li>
+            </ul>
+
+            <p>Rekken</p>
+
+            <ul>
+            <li>benen wijd, voor/achter met je handen: 1min</li>
+            <li>benen stukje terug, naar je knie met je neus: Links/Rechts: 1min</li>
+            <li>linkerbeen rechterhand aanraken, en andersom. steeds hoger. recht omhoog: 30sec</li>
+            <li>linkerbeen rechterhand aanraken, en andersom. steeds hoger. naar binnen: 30sec</li>
+            <li>linkerbeen rechterhand aanraken, en andersom. steeds hoger. naar buiten: 30sec</li>
+            </ul>
+
+            <h1 id="2050techniek60min">20.50 Techniek – 60min</h1>
+
+            <p>Goed gewerkt! Spullen aan en een partner zoeken.
+            Wie zit er het langst op kickboksen?</p>
+
+            <p>Boksen: 4min</p>
+
+            <ul>
+            <li>Jab – Body Cross – L Hoek – R Hoek: 3min</li>
+            <li>veren &amp; springen: 10: 1min</li>
+            </ul>
+
+            <p>Boksen: 4min</p>
+
+            <ul>
+            <li>Jab – R Uppercut – L Hoek – L Hoek: 3min</li>
+            <li>om en om: roundhouses: 1min</li>
+            </ul>
+
+            <p>Boksen: 5min</p>
+
+            <ul>
+            <li>Jab – R Uppercut - L Hoek - Cross: 3min</li>
+            <li>3x 20sec snel stoten: 2min</li>
+            </ul>
+
+            <p>Een setje. Eerst elk stapje oefenen: 20min</p>
+
+            <ul>
+            <li>(1) Jab – R Lowkick: 3min</li>
+            <li>(2) Jab – Cross – L Roundhouse: 4min</li>
+            <li>(3) Jab – Cross – L Hoek – R Highkick: 4min</li>
+            <li>1+2+3 – 1min langzaam + 3min vol, each: 8min</li>
+            <li>burpies. dames mogen op de knieen: 10: 1min</li>
+            </ul>
+
+            <p>Duiken: 4min</p>
+
+            <ul>
+            <li>Jab - Cross - (L Hoek) - R Shift - Cross - Lever - R Lowkick: 3min</li>
+            <li>planken: 1min</li>
+            </ul>
+
+            <p>Trap vangen, en counteren: 7min</p>
+
+            <ul>
+            <li>Cross - Lever - R Lowkick: 1m</li>
+            <li>Cross - Lever - R Lowkick - L Roundhouse - (Block): 2m</li>
+            <li>Cross - Lever - R Lowkick - L Roundhouse - (Block) - (Cross) - (L Roundhouse): 3m</li>
+            <li>crunch &amp; punch: 1min</li>
+            </ul>
+
+            <p>Swingback: 4min</p>
+
+            <ul>
+            <li>Jab – Body Cross - (Jab) - Swingback - Cross - Lever - R Lowkick: 3min</li>
+            <li>Pushup diamonds: 10</li>
+            <li>Pushup wide: 10</li>
+            <li>Pushup langzaam: 10</li>
+            </ul>
+
+            <h1 id="2150powerdown10m">21.50 Power down 10m</h1>
+
+            <p>Spullen uit</p>
+
+            <ul>
+            <li>Op de vuisten, elkaar wegtrekken</li>
+            <li>Haken</li>
+            <li>Duwen</li>
+            <li>Been op elkaars schouders</li>
+            </ul>
+
+            <p>We gaan de hartslag omlaag brengen.
+            Op je knieen zitten. Handen open. Borst vooruit. Adem met je buik. Sluit je af voor iedereen. Neus in..  Mond uit.. Neus in.. Mond uit..
+            Goed gewerkt jongens. Bedankt voor jullie aandacht!
+            Klappen</p>
+        </p>       
     </div>
 
     <script type="text/javascript" src="js/base.js"></script>
