--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>kbt2</title>
 </head>
 
-<body>
+<body class="skin-dark">
 
     <section role="region">
         <header>
@@ -31,7 +31,7 @@
             <menu type="toolbar">
                 <button id="install"><span class="icon icon-add">add</span></button>
 
-                <button data-seconds="2"  class="interval">2s</button>
+                <button data-seconds="2"  class="interval">30s</button>
                 <button data-seconds="60"  class="interval">1m</button>
                 <button data-seconds="120" class="interval">2m</button>
                 <button data-seconds="180" class="interval">3m</button>
@@ -43,9 +43,8 @@
         </header>
     </section>
 
-
     <div id="main">
-        <p style="height: 4rem;" >
+        <p class="top-bar-placeholder">
             topbar placeholder
         </p>
         <p id="installation-instructions">
