--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
             <!-- Icon that will indicate whether you are online or offline - enabled if you are using offline/appcache (see above) -->
             <!-- <div id="online-status" title="Online"></div> -->
             <menu type="toolbar">
+                <button data-seconds="30"  class="interval">30s</button>
                 <button id="install"><span class="icon icon-add">add</span></button>
-
-                <button data-seconds="2"  class="interval">30s</button>
                 <button data-seconds="60"  class="interval">1m</button>
                 <button data-seconds="120" class="interval">2m</button>
                 <button data-seconds="180" class="interval">3m</button>
-                <button class="counter">loading</button>
+                <button class="counter">Loading</button>
             </menu>
           <!--   <h1>
                 kbt2
@@ -50,12 +49,39 @@
         <p id="installation-instructions">
             Press the + button in the top right corner to install this app.
         </p>
-        <div id="lesson"></div>
+        <div id="lesson">Loading</div>
     </div>
 
     <script type="text/javascript" src="js/markdown.js"></script>
     <script type="text/javascript" src="js/base.js"></script>
-    <script type="text/javascript" src="js/webapp.js"></script>
+    <script type="text/javascript" src="js/stopwatch.js"></script>
     <script type="text/javascript" src="js/offline.js"></script>
+    <script type="text/javascript">
+        (function () {
+          // Instantiate new objects with 'new'
+          var stopwatch = new Stopwatch({
+            "milliStep": 500,
+            "fadeFactor": 0.6,
+            "elements": {
+                "body": document.querySelector('body'),
+                "counter": document.querySelector('button.counter'),
+                "lesson": document.querySelector('#lesson'),
+                "intervals": document.querySelectorAll('button.interval'),
+            }
+          });
+
+          // Invoke methods like this
+          stopwatch.bind();
+          stopwatch.loadLesson('les2');
+
+          // Main
+          if ('mozLockOrientation' in screen) {
+            var portraitLock = screen.mozLockOrientation('portrait');
+            if (portraitLock) {
+              console.log('Orientation locked to portrait');
+            }
+          }
+        })(); 
+    </script>
 </body>
 </html>
