--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
           // Invoke methods like this
           stopwatch.bind();
-          stopwatch.loadLesson('les7');
+          stopwatch.loadLesson('lesson8');
 
           // Main
           if ('mozLockOrientation' in screen) {
