--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
         <p id="installation-instructions">
             Press the + button in the top right corner to install this app.
         </p>
-        <div id="lesson">Loading</div>
+        <div id="lesson">Loading...</div>
+        <ul>
+          <li><a href="/lessons/lesson5.md" class="load-markdown">Lesson 5</li>
+          <li><a href="/lessons/lesson6.md" class="load-markdown">Lesson 6</li>
+          <li><a href="/lessons/lesson7.md" class="load-markdown">Lesson 7</li>
+          <li><a href="/lessons/lesson8.md" class="load-markdown">Lesson 8</li>
+        </ul>
     </div>
 
     <script type="text/javascript" src="js/markdown.js"></script>
@@ -74,6 +80,14 @@
           stopwatch.bind();
           stopwatch.loadConfig(function(err, config) {
             stopwatch.loadMarkdown(config.markdown_index);
+          });
+
+          [].forEach.call(document.querySelectorAll('.load-markdown'), function(el) {
+            el.onclick = function () {
+              var href = el.getAttribute('href');
+              stopwatch.loadMarkdown(href);
+              return false;
+            };
           });
 
           // Main
