--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             if (portraitLock) {
               console.log('locked to portrait');
             } else {
-              console.error('Unable to lock orientation');
+              console.log('Unable to lock orientation');
             }
           }
 
