--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <li><a href="/lessons/lesson6.md" class="load-markdown">Lesson 6</li>
           <li><a href="/lessons/lesson7.md" class="load-markdown">Lesson 7</li>
           <li><a href="/lessons/lesson8.md" class="load-markdown">Lesson 8</li>
+          <li><a href="/lessons/lesson9.md" class="load-markdown">Lesson 9</li>
         </ul>
     </div>
 
