--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             }
           };
 
-          if (webAppIsInstalledAlready === true) {
+          if (window.webAppIsInstalledAlready === true) {
             window.addEventListener('focus', lockOrientation, false);
             lockOrientation();
           }
