Less screenestate for completed

--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
         <ul id="lesson-nav">
 
         </ul>
-        <p id="completed">
-          0 completed
-        </p>
-        <p id="clock">
-          00:00:00
+        <p id="statusbar">
+          <span id="completed">
+            
+          </span>
+          <span id="clock">
+            00:00:00
+          </span>
         </p>
     </div>
 
