--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         </p>
     </div>
 
+    <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/marked.js"></script>
     <script type="text/javascript" src="js/base.js"></script>
     <script type="text/javascript" src="js/stopwatch.js"></script>
