--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
             var number = (config.markdown_index+'').match(/(\d+)(\-[a-z]+)?\.md$/)[1];
             if (number) {
               var lessonNav = document.querySelector('#lesson-nav');
-              lessonNav.innerHTML += '<li><a href="/lessons/lesson' +  number + '-bb.md">Lesson ' +  number + ' BB</li>'
-              lessonNav.innerHTML += '<li><a href="/lessons/lesson' +  number + '-bg.md">Lesson ' +  number + ' BG</li>'
-              lessonNav.innerHTML += '<li><a href="/lessons/lesson' +  number + '-kz.md">Lesson ' +  number + ' KZ</li>'
+              lessonNav.innerHTML += '<li><a href="/lessons/lesson' +  number + '-bb.md">Les ' +  number + ' BB</li>'
+              lessonNav.innerHTML += '<li><a href="/lessons/lesson' +  number + '-bg.md">Les ' +  number + ' BG</li>'
+              lessonNav.innerHTML += '<li><a href="/lessons/lesson' +  number + '-kz.md">Les ' +  number + ' KZ</li>'
             }
 
             // Make any markdown hrefs load markdown instantly
