--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             }, 100));
 
             // Show latest lesson
-            stopwatch.loadMarkdown(config.markdown_index, function () {
+            stopwatch.loadMarkdown(config.kbt2.markdownIndex, function () {
               // Build chapter cache index for sticky chapters
               chapters = []
               $('h1').each(function (i, el) {
@@ -145,7 +145,7 @@
 
             // Adding lesson navigation gets me in more trouble than it solves
             // // Show links to 5 latest lessons
-            // var number = (config.markdown_index+'').match(/(\d+)\.md$/)[1];
+            // var number = (config.kbt2.markdownIndex+'').match(/(\d+)\.md$/)[1];
             // if (number) {
             //   var lessonNav = document.querySelector('#lesson-nav');
             //   for (var i = number; i >= (number-5); i--) {
@@ -154,7 +154,7 @@
             // }
 
             // Show links to different disciplines in current lesson
-            // var number = (config.markdown_index+'').match(/(\d+)(\-[a-z]+)?\.md$/)[1];
+            // var number = (config.kbt2.markdownIndex+'').match(/(\d+)(\-[a-z]+)?\.md$/)[1];
             // if (number) {
             //   var lessonNav = document.querySelector('#lesson-nav');
             //   lessonNav.innerHTML += '<li><a href="/lessons/lesson' +  number + '-bb.md">Les ' +  number + ' BB</li>'
